<resources>
    <string name="app_name">Grocery Planner</string>
    <string name="sharedPref_name">sharedPref</string>
    <string name="saved_token">savedToken</string>

    <string name="btn_save_text">Save</string>
    <string name="btn_delete_text">Delete</string>
    <string name="btn_cancel_text">Cancel</string>

    <string name="action_search">Search</string>
    <string name="action_sort">Sort</string>
    <string name="action_add_recipe">Add Recipe</string>
    <string name="action_delete">Delete</string>
    <string name="action_add">Add</string>

    <string name="title_main_page">Account</string>
    <string name="title_ingredient_edit">Ingredient Edit</string>
    <string name="title_ingredient_add">Ingredient Add</string>
    <!-- list headers -->
    <string name="title_recipe_list">Recipe List</string>
    <string name="title_category_list">Category List</string>
    <string name="title_grocery_list">Grocery List</string>
    <string name="title_ingredient_list">Ingredient List</string>
    <!-- Grocery Details -->
    <string name="title_grocery_ingredients">Grocery Ingredients</string>

    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="burger">Burger</string>

    <string name="overview_title">Overview</string>
    <string name="ingredients_title">Ingredients</string>
    <string name="instructions_title">Instructions</string>
    <string name="nutrition_title">Nutrition</string>

    <!-- fragment tags -->
    <string name="RECIPE_LIST_TAG">recipe_list_tag</string>
    <string name="RECIPE_CATEGORY_TAG">recipe_category_tag</string>
    <string name="GROCERY_LIST_TAG">grocery_list_tag</string>
    <string name="LOGIN_TAG">login_tag</string>
    <string name="SIGN_UP_TAG">sign_up_tag</string>
    <string name="INGREDIENT_LIST_TAG">ingredient_list_tag</string>
    <string name="INGREDIENT_EDIT_TAG">ingredient_edit_tag</string>
    <string name="INGREDIENT_LOCATION_TAG">ingredient_location_tag</string>
    <string name="RECIPE_SIDE_SCROLL_NEW_TAG">recipe_side_scroll_new_tag</string>
    <string name="RECIPE_SIDE_SCROLL_TRENDING_TAG">recipe_side_scroll_trending_tag</string>
    <string name="RECIPE_FILTER_TAG">recipe_filter_tag</string>
    <string name="ONLINE_RECIPE_LIST_TAG">online_recipe_list_tag</string>

    <string name="teaspoon">Teaspoon</string>
    <string name="dessertspoon">Dessertspoon</string>
    <string name="tablespoon">Tablespoon</string>
    <string name="ounce">Ounce</string>
    <string name="cup">Cup</string>
    <string name="pint">Pint</string>
    <string name="quart">Quart</string>
    <string name="gallon">Gallon</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="open">open</string>
    <string name="close">close</string>
    <string name="title_activity_discover">DiscoverActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_my_recipes">MyRecipesActivity</string>

</resources>
